welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:25: error: illegal start of simple expression
	}
        ^